--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "private": false,
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "prop-types": "15.8.1",
-    "react-dom": "18.0.0",
-    "react": "18.0.0"
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@babel/core": "7.18.5",
+    "@babel/preset-env": "7.18.2",
+    "@babel/preset-react": "7.17.12",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@types/jest": "28.1.3",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
     "@vitejs/plugin-react": "1.3.0",
+    "babel-jest": "28.1.1",
     "eslint": "8.18.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-standard": "17.0.0",
@@ -24,6 +32,7 @@
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "28.1.1",
     "prettier": "2.7.1",
     "vite": "2.9.9"
   },
