--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@babel/core": "7.18.5",
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.17.12",
-    "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@types/jest": "28.1.3",
     "@types/react": "18.0.0",
@@ -33,6 +32,7 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "prettier": "2.7.1",
     "vite": "2.9.9"
   },
