--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "prettier": "2.7.1",
-    "vite": "2.9.9"
+    "vite": "2.9.9",
+    "whatwg-fetch": "3.6.2"
   },
   "browserslist": {
     "production": [
